--- a/MVC/CIPlatform/CIPlatform/Views/Home/EditProfile.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/EditProfile.cshtml
@@ -89,20 +89,12 @@
                                 <li class="nav-item stories">
                                     <a class="nav-link" asp-action="StoryListing" asp-controller="Home">Stories</a>
                                 </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle dropdown-policy" href="#" id="navbarDropdown"
-                               role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Policy
-                                    </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="#">Volunteering</a>
-                                        <a class="dropdown-item" href="#">Sponsered</a>
-
+                                
+                                <li class="nav-item stories">
+                                    <a class="nav-link" asp-action="PrivacyPolicy" asp-controller="Home">Privacy</a>
                                 </li>
                                 <li>
                                     <img src="data:image;base64,@ViewBag.avatarimg" style="align-content:flex-end;" alt="" class="user-avatar">
-
-
 
                                 </li>
                             </ul>
