--- a/MVC/CIPlatform/CIPlatform/Views/Home/Admin_Mission.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/Admin_Mission.cshtml
@@ -29,7 +29,10 @@
 
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css" />
 
-
+     <script src="https://code.jquery.com/jquery-3.6.3.min.js" accesskey=""
+integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
  
 </head>
 
