--- a/MVC/CIPlatform/CIPlatform/Views/Home/Admin_MissionTheme.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/Admin_MissionTheme.cshtml
@@ -29,9 +29,21 @@
 
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css" />
 
-     @*for sweet alerts*@
+    @*for sweet alerts*@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.10.1/dist/sweetalert2.all.min.js"></script>
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@10.10.1/dist/sweetalert2.min.css'>
+
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js" accesskey=""
+            integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+
+
+    @*for toaster*@
+
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+    <link href="toastr.css" rel="stylesheet" />
+
 
 
 </head>
@@ -39,7 +51,7 @@
 
 @if (TempData.ContainsKey("DataSavedMessage"))
 {
-<script>alert('@TempData["DataSavedMessage"]');</script>
+    <script>alert('@TempData["DataSavedMessage"]');</script>
 }
 <div class="wrapper">
     <!-- Sidebar -->
@@ -100,6 +112,27 @@
     </nav>
     <!-- Page Content -->
     <div id="layout-admin">
+        @{
+            if (TempData["DataSaved"] != null)
+            {
+                <script src="~/lib/jquery/dist/jquery.min.js"></script>
+                <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+                <script type="text/javascript">
+                    toastr.success('@TempData["DataSaved"]');
+                </script>
+            }
+
+            if (TempData["EditedData"] != null)
+            {
+                <script src="~/lib/jquery/dist/jquery.min.js"></script>
+                <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+                <script type="text/javascript">
+                    toastr.success('@TempData["EditedData"]');
+                </script>
+            }
+          
+
+        }
         <div class="header">
             <div class="d-flex justify-content-between">
                 <div class="DateAndTime">
@@ -136,7 +169,7 @@
         <div id="content-admin" class="content-admin">
             <h1>Mission Theme</h1>
             <br />
-            
+
             <hr />
             <div class="firstrow">
                 <div class="col-7">
@@ -263,7 +296,7 @@
 
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModalMT" data-bs-backdrop="static" tabindex="-1" aria-labelledby="exampleModalLabelEdit" aria-hidden="true">
+<div class="modal fade" id="exampleModalMT"  tabindex="-1" aria-labelledby="exampleModalLabelEdit" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
             <div class="modal-header">
@@ -305,7 +338,7 @@
                 <div class="modal-footer">
                     <button type="button" class="btn cancel-btn" data-bs-dismiss="modal">Cancel</button>
                     <button type="submit" class="btn save-btn" onclick="saveEditedMTData()">Save</button>
-                  
+
 
                 </div>
             </div>
@@ -316,7 +349,8 @@
 
     <script src="~/js/admin_mtheme.js"></script>
 
-
+    <script src="toastr.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 
 
