--- a/MVC/CIPlatform/CIPlatform/Views/Home/Admin_user.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/Admin_user.cshtml
@@ -34,6 +34,9 @@
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+<link href="toastr.css" rel="stylesheet" />
+
 </head>
 
 
@@ -96,6 +99,17 @@
     </nav>
     <!-- Page Content -->
     <div id="layout-admin">
+        @{
+            if (TempData["DataSaved"] != null)
+            {
+            <script src="~/lib/jquery/dist/jquery.min.js"></script>
+            <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+            <script type="text/javascript">
+            toastr.success('@TempData["DataSaved"]');
+            </script>
+            }
+        }
+
         <div class="header">
             <div class="d-flex justify-content-between">
                 <div class="DateAndTime">
@@ -202,7 +216,7 @@
 
                                         <br />
 
-                                        <div>
+         @*                               <div>
 
                                             <label asp-for="CountryId" class="form-label">Country</label>
                                             <br>
@@ -241,7 +255,7 @@
                                             <span asp-validation-for="CityId" class="text-danger" style="font-size:12px;"></span>
 
 
-                                        </div>
+                                        </div>*@
                                         <br />
                                         <div>
                                             <label for="empid" class="form-label">Employee ID</label>
@@ -488,3 +502,6 @@
 
 <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
 <script src="~/js/admin_user.js"></script>
+
+<script src="toastr.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
